# wgm

./: Cargo.toml  README.md  flake.nix  gen_swizzles.py
examples/: demo.rs  random.rs  serialize.rs  swizzle.rs
src/: alias.rs  lib.rs  mat2.rs  mat3.rs  mat4.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
src/features/: bytemuck.rs  mod.rs  rand.rs  serde.rs  swizzle.rs
src/units/: deg.rs  mod.rs  rad.rs  tau.rs
tests/: t_mat2.rs  t_mat3.rs  t_mat4.rs  t_quat.rs  t_vec2.rs  t_vec3.rs  t_vec4.rs
