[package]
name = "wgm"
license = "MIT"
edition = "2021"
version = "0.0.4"
version = "0.0.5"
repository = "https://github.com/ShyAssassin/wgm"
categories = ["mathematics", "game-development"]
keywords = ["gamedev", "math", "vector", "matrix"]
description = "A fast and simple math library for game and graphics development"

[features]
default = ["rand", "bytemuck", "swizzle", "serde"]
bytemuck = ["dep:bytemuck"]
serde = ["dep:serde"]
rand = ["dep:rand"]
swizzle = []

[dependencies]
rand = {version = "0.8.5", default-features = false, optional = true}
serde = {version = "1.0.207", default-features = false, optional = true}
bytemuck = {version = "1.16.3", default-features = false, optional = true}

[lints.clippy]
needless_return = "allow"
redundant_field_names = "allow"
